# textforensics

./: .dockerignore  .env  .env.base  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  project.toml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: gpu-ci.yml
conf/: config.yaml
conf/data/: spooky_authors.yaml
conf/experiment/: quick_test.yaml
conf/infrastructure/compute/: local.yaml  rtx_5070_ti.yaml
conf/model/: unified_base.yaml
conf/pipeline/: training.yaml
conf/training/loss/: multi_task.yaml
conf/training/optimizer/: adamw.yaml
docs/arch/: mlops.dot  model.dot  net_arch.md
docs/ci/: devops.md  mlops.md
docs/infrastructure/: hardware_resources.md  proj_tree.json
docs/research/: hardware_resources.txt  net_arch.md  roadmap.md  synopses.md
docs/research/net_archs/: net_arch_0.md  net_arch_1.md  net_arch_2.md  net_arch_3.md
docs/research/proj_tree/: pro_tree_0.txt  pro_tree_1.txt  proj_tree_2.txt
examples/quickstart/: simple_example.py
requirements/: api.txt  base.txt  dev.txt  training.txt
scripts/: benchmark_gpu.py  monitor_gpu.py  train.py
scripts/dev/: git-config-init.sh  setup-git-ssh.sh  setup_dev.sh
scripts/monitoring/: monitor_gpu.py
scripts/training/: benchmark_gpu.py  train.py
src/textforensics/: __init__.py  api.py  cli.py
src/textforensics/layers/: __init__.py
src/textforensics/losses/: __init__.py
src/textforensics/models/: __init__.py  base.py  unified_model.py
tests/: conftest.py
(+3 files in other folders)
